--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
 
         <!-- Main Content -->
         <main class="main-content">
-            <img src="../Images/Hero-Image-One.png" alt="AI Challenge Hero" class="hero-image">
+            <img src="Images/Hero-Image-One.png" alt="AI Challenge Hero" class="hero-image">
             
             <h1 class="challenge-title">28-DAY AI CHALLENGE</h1>
             
