--- a/index.html
+++ b/index.html
@@ -467,8 +467,8 @@
             <p class="question">HAVE YOU EVER USED AI?</p>
             
             <div class="button-group">
-                <button class="cta-button">YES ></button>
-                <button class="cta-button">NO ></button>
+                <button class="cta-button" onclick="window.location.href='questionnaire.html'">YES ></button>
+                <button class="cta-button" onclick="window.location.href='questionnaire.html'">NO ></button>
             </div>
         </main>
 
