--- a/index.html
+++ b/index.html
@@ -272,6 +272,120 @@
             text-decoration: underline;
         }
 
+        /* Sidebar Styles */
+        .sidebar {
+            position: fixed;
+            top: 0;
+            right: -300px;
+            width: 300px;
+            height: 100vh;
+            background: linear-gradient(135deg, #ffffff, #f8f9fa);
+            box-shadow: -5px 0 15px rgba(0, 0, 0, 0.1);
+            transition: right 0.3s ease;
+            z-index: 1000;
+            overflow-y: auto;
+        }
+
+        .dark-mode .sidebar {
+            background: linear-gradient(135deg, #1a1a1a, #2d2d2d);
+            box-shadow: -5px 0 15px rgba(0, 0, 0, 0.3);
+        }
+
+        .sidebar.active {
+            right: 0;
+        }
+
+        .sidebar-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 20px;
+            border-bottom: 1px solid #e5e7eb;
+        }
+
+        .dark-mode .sidebar-header {
+            border-bottom-color: #404040;
+        }
+
+        .sidebar-logo {
+            height: 40px;
+            width: auto;
+        }
+
+        .close-sidebar {
+            background: none;
+            border: none;
+            font-size: 24px;
+            color: #333333;
+            cursor: pointer;
+            padding: 0;
+            width: 30px;
+            height: 30px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border-radius: 50%;
+            transition: background-color 0.3s ease;
+        }
+
+        .dark-mode .close-sidebar {
+            color: #ffffff;
+        }
+
+        .close-sidebar:hover {
+            background-color: #f3f4f6;
+        }
+
+        .dark-mode .close-sidebar:hover {
+            background-color: #404040;
+        }
+
+        .sidebar-nav {
+            padding: 20px 0;
+        }
+
+        .nav-item {
+            display: block;
+            padding: 15px 20px;
+            color: #333333;
+            text-decoration: none;
+            font-weight: 500;
+            transition: all 0.3s ease;
+            border-left: 3px solid transparent;
+        }
+
+        .dark-mode .nav-item {
+            color: #ffffff;
+        }
+
+        .nav-item:hover {
+            background-color: #f3f4f6;
+            border-left-color: #36b7ff;
+            color: #36b7ff;
+        }
+
+        .dark-mode .nav-item:hover {
+            background-color: #404040;
+        }
+
+        .sidebar-overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            z-index: 999;
+            opacity: 0;
+            visibility: hidden;
+            transition: all 0.3s ease;
+        }
+
+        .sidebar-overlay.active {
+            opacity: 1;
+            visibility: visible;
+        }
+
         /* Responsive Design */
         @media (max-width: 768px) {
             .container {
@@ -420,6 +534,15 @@
 
         // Check for time changes every minute
         setInterval(setDarkMode, 60000);
+
+        // Sidebar functionality
+        function toggleSidebar() {
+            const sidebar = document.getElementById('sidebar');
+            const overlay = document.getElementById('sidebarOverlay');
+            
+            sidebar.classList.toggle('active');
+            overlay.classList.toggle('active');
+        }
     </script>
 </head>
 <body>
@@ -429,11 +552,25 @@
             <a href="#" class="logo">
                 <img src="Images/Movienta-Box-logo.png" alt="Movienta Logo">
             </a>
-            <div class="menu-icon">
+            <div class="menu-icon" onclick="toggleSidebar()">
                 <span></span>
                 <span></span>
                 <span></span>
             </div>
+        </header>
+
+        <!-- Sidebar Menu -->
+        <div class="sidebar" id="sidebar">
+            <div class="sidebar-header">
+                <img src="Images/Movienta-Box-logo.png" alt="Movienta Logo" class="sidebar-logo">
+                <button class="close-sidebar" onclick="toggleSidebar()">×</button>
+            </div>
+            <nav class="sidebar-nav">
+                <a href="index.html" class="nav-item">Home</a>
+                <a href="login.html" class="nav-item">Login</a>
+            </nav>
+        </div>
+        <div class="sidebar-overlay" id="sidebarOverlay" onclick="toggleSidebar()"></div>
         </header>
 
         <!-- Trust Badges -->
