--- a/index.html
+++ b/index.html
@@ -567,6 +567,7 @@
             </div>
             <nav class="sidebar-nav">
                 <a href="index.html" class="nav-item">Home</a>
+                <a href="dashboard.html" class="nav-item">Dashboard</a>
                 <a href="login.html" class="nav-item">Login</a>
             </nav>
         </div>
