--- a/dashboard.html
+++ b/dashboard.html
@@ -360,6 +360,93 @@
             opacity: 0.9;
         }
 
+        /* Profile Section */
+        .profile-card {
+            background: linear-gradient(135deg, #ffffff, #f8f9fa);
+            border-radius: 16px;
+            padding: 30px;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.08);
+            border: 1px solid #e5e7eb;
+            transition: all 0.3s ease;
+            margin-bottom: 30px;
+        }
+
+        .dark-mode .profile-card {
+            background: linear-gradient(135deg, #1a1a1a, #2d2d2d);
+            border-color: #404040;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
+        }
+
+        .profile-title {
+            font-size: 1.5rem;
+            font-weight: 600;
+            color: #333333;
+            margin-bottom: 20px;
+            text-align: center;
+            transition: color 0.3s ease;
+        }
+
+        .dark-mode .profile-title {
+            color: #ffffff;
+        }
+
+        .profile-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 15px;
+        }
+
+        .profile-item {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 12px 16px;
+            background-color: #f8f9fa;
+            border-radius: 8px;
+            border: 1px solid #e5e7eb;
+            transition: all 0.3s ease;
+        }
+
+        .dark-mode .profile-item {
+            background-color: #2d2d2d;
+            border-color: #404040;
+        }
+
+        .profile-label {
+            font-weight: 600;
+            color: #6B7280;
+            font-size: 0.9rem;
+            transition: color 0.3s ease;
+        }
+
+        .dark-mode .profile-label {
+            color: #9CA3AF;
+        }
+
+        .profile-value {
+            font-weight: 500;
+            color: #333333;
+            font-size: 0.9rem;
+            text-align: right;
+            transition: color 0.3s ease;
+        }
+
+        .dark-mode .profile-value {
+            color: #ffffff;
+        }
+
+        .profile-placeholder {
+            text-align: center;
+            color: #6B7280;
+            font-size: 1rem;
+            margin: 20px 0;
+            transition: color 0.3s ease;
+        }
+
+        .dark-mode .profile-placeholder {
+            color: #9CA3AF;
+        }
+
         /* Footer */
         .footer {
             text-align: center;
@@ -507,6 +594,7 @@
                     if (user) {
                         currentUser = user;
                         updateUserInfo();
+                        fetchUserProfile();
                     } else {
                         // Redirect to login if not authenticated
                         window.location.href = 'login.html';
@@ -526,6 +614,81 @@
                 if (userEmail) {
                     userEmail.textContent = currentUser.email;
                 }
+            }
+        }
+
+        async function fetchUserProfile() {
+            if (!currentUser) return;
+
+            try {
+                const { getFirestore, collection, query, where, getDocs } = await import('https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js');
+                const db = getFirestore();
+
+                // Query students collection for the current user's UID
+                const studentsRef = collection(db, "students");
+                const q = query(studentsRef, where("uid", "==", currentUser.uid));
+                const querySnapshot = await getDocs(q);
+
+                if (!querySnapshot.empty) {
+                    const userData = querySnapshot.docs[0].data();
+                    displayUserProfile(userData);
+                } else {
+                    console.log("No profile data found for user");
+                    displayDefaultProfile();
+                }
+            } catch (error) {
+                console.error("Error fetching user profile:", error);
+                displayDefaultProfile();
+            }
+        }
+
+        function displayUserProfile(userData) {
+            const profileSection = document.getElementById('userProfile');
+            if (profileSection) {
+                profileSection.innerHTML = `
+                    <div class="profile-card">
+                        <h3 class="profile-title">🎯 Your AI Profile</h3>
+                        <div class="profile-grid">
+                            <div class="profile-item">
+                                <span class="profile-label">AI Experience:</span>
+                                <span class="profile-value">${userData.aiExperience || 'Not specified'}</span>
+                            </div>
+                            <div class="profile-item">
+                                <span class="profile-label">Primary Goal:</span>
+                                <span class="profile-value">${userData.primaryGoal || 'Not specified'}</span>
+                            </div>
+                            <div class="profile-item">
+                                <span class="profile-label">Income Level:</span>
+                                <span class="profile-value">${userData.incomeLevel || 'Not specified'}</span>
+                            </div>
+                            <div class="profile-item">
+                                <span class="profile-label">Time Available:</span>
+                                <span class="profile-value">${userData.timeAvailable || 'Not specified'}</span>
+                            </div>
+                            <div class="profile-item">
+                                <span class="profile-label">Biggest Challenge:</span>
+                                <span class="profile-value">${userData.biggestChallenge || 'Not specified'}</span>
+                            </div>
+                            <div class="profile-item">
+                                <span class="profile-label">Success Goal:</span>
+                                <span class="profile-value">${userData.successGoal || 'Not specified'}</span>
+                            </div>
+                        </div>
+                    </div>
+                `;
+            }
+        }
+
+        function displayDefaultProfile() {
+            const profileSection = document.getElementById('userProfile');
+            if (profileSection) {
+                profileSection.innerHTML = `
+                    <div class="profile-card">
+                        <h3 class="profile-title">🎯 Your AI Profile</h3>
+                        <p class="profile-placeholder">Complete the AI assessment to see your personalized profile here.</p>
+                        <button class="card-button" onclick="window.location.href='questionnaire.html'">Take Assessment</button>
+                    </div>
+                `;
             }
         }
 
@@ -603,6 +766,11 @@
             <div class="welcome-section">
                 <h2 class="welcome-title">🎉 Welcome Back!</h2>
                 <p class="welcome-text">You're now ready to start your AI learning adventure with Movienta</p>
+            </div>
+
+            <!-- User Profile Section -->
+            <div id="userProfile">
+                <!-- Profile data will be loaded here -->
             </div>
 
             <div class="dashboard-grid">
