--- a/dashboard.html
+++ b/dashboard.html
@@ -447,6 +447,55 @@
             color: #9CA3AF;
         }
 
+        /* Lesson Cards */
+        .lesson-card {
+            position: relative;
+        }
+
+        .lesson-header {
+            display: flex;
+            align-items: center;
+            gap: 15px;
+            margin-bottom: 15px;
+        }
+
+        .lesson-status {
+            flex-shrink: 0;
+        }
+
+        .lesson-circle {
+            transition: all 0.3s ease;
+        }
+
+        .lesson-circle.completed {
+            fill: #10B981;
+            stroke: #10B981;
+        }
+
+        .lesson-circle.completed::after {
+            content: '✓';
+            position: absolute;
+            color: white;
+            font-weight: bold;
+            font-size: 14px;
+        }
+
+        .lesson-card.completed .card-title {
+            color: #10B981;
+        }
+
+        .dark-mode .lesson-card.completed .card-title {
+            color: #34D399;
+        }
+
+        .lesson-card.completed .card-button {
+            background: linear-gradient(135deg, #10B981, #059669);
+        }
+
+        .lesson-card.completed .card-button:hover {
+            box-shadow: 0 6px 20px rgba(16, 185, 129, 0.3);
+        }
+
         /* Footer */
         .footer {
             text-align: center;
@@ -595,6 +644,7 @@
                         currentUser = user;
                         updateUserInfo();
                         fetchUserProfile();
+                        loadLessonProgress();
                     } else {
                         // Redirect to login if not authenticated
                         window.location.href = 'login.html';
@@ -692,6 +742,87 @@
             }
         }
 
+        async function loadLessonProgress() {
+            if (!currentUser) return;
+
+            try {
+                const { getFirestore, collection, query, where, getDocs } = await import('https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js');
+                const db = getFirestore();
+
+                // Query for user's lesson progress
+                const progressRef = collection(db, "lessonProgress");
+                const q = query(progressRef, where("uid", "==", currentUser.uid));
+                const querySnapshot = await getDocs(q);
+
+                if (!querySnapshot.empty) {
+                    const progressData = querySnapshot.docs[0].data();
+                    updateLessonStatus(progressData.completedLessons || []);
+                }
+            } catch (error) {
+                console.error("Error loading lesson progress:", error);
+            }
+        }
+
+        function updateLessonStatus(completedLessons) {
+            for (let i = 1; i <= 7; i++) {
+                const statusElement = document.getElementById(`lesson${i}-status`);
+                const cardElement = statusElement.closest('.lesson-card');
+                const circleElement = statusElement.querySelector('.lesson-circle');
+                
+                if (completedLessons.includes(i)) {
+                    circleElement.classList.add('completed');
+                    cardElement.classList.add('completed');
+                    const button = cardElement.querySelector('.card-button');
+                    button.textContent = 'Completed ✓';
+                    button.disabled = true;
+                }
+            }
+        }
+
+        async function completeLesson(lessonNumber) {
+            if (!currentUser) return;
+
+            try {
+                const { getFirestore, collection, query, where, getDocs, setDoc, doc } = await import('https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js');
+                const db = getFirestore();
+
+                // Get current progress
+                const progressRef = collection(db, "lessonProgress");
+                const q = query(progressRef, where("uid", "==", currentUser.uid));
+                const querySnapshot = await getDocs(q);
+
+                let completedLessons = [];
+                let docId = currentUser.uid;
+
+                if (!querySnapshot.empty) {
+                    const progressData = querySnapshot.docs[0].data();
+                    completedLessons = progressData.completedLessons || [];
+                }
+
+                // Add lesson to completed list if not already completed
+                if (!completedLessons.includes(lessonNumber)) {
+                    completedLessons.push(lessonNumber);
+                }
+
+                // Save updated progress
+                await setDoc(doc(db, "lessonProgress", docId), {
+                    uid: currentUser.uid,
+                    completedLessons: completedLessons,
+                    lastUpdated: new Date().toISOString()
+                });
+
+                // Update UI
+                updateLessonStatus(completedLessons);
+
+                // Show success message
+                alert(`Lesson ${lessonNumber} completed successfully!`);
+
+            } catch (error) {
+                console.error("Error completing lesson:", error);
+                alert("Error completing lesson. Please try again.");
+            }
+        }
+
         async function handleLogout() {
             try {
                 const { signOut } = await import('https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js');
@@ -774,28 +905,95 @@
             </div>
 
             <div class="dashboard-grid">
-                <div class="dashboard-card">
-                    <h3 class="card-title">📚 Start Learning</h3>
-                    <p class="card-content">Begin your AI journey with our comprehensive learning modules designed for all skill levels.</p>
-                    <button class="card-button" onclick="window.location.href='index.html'">Start Learning</button>
+                <div class="dashboard-card lesson-card">
+                    <div class="lesson-header">
+                        <div class="lesson-status" id="lesson1-status">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" class="lesson-circle">
+                                <circle cx="12" cy="12" r="10" stroke="#e5e7eb" stroke-width="2"/>
+                            </svg>
+                        </div>
+                        <h3 class="card-title">Lesson 1: Introduction to AI Fundamentals</h3>
+                    </div>
+                    <p class="card-content">Learn the basics of artificial intelligence, machine learning, and how AI is transforming industries today.</p>
+                    <button class="card-button" onclick="completeLesson(1)">Complete Lesson</button>
                 </div>
 
-                <div class="dashboard-card">
-                    <h3 class="card-title">📊 Your Progress</h3>
-                    <p class="card-content">Track your learning progress, completed modules, and achievements in your personalized dashboard.</p>
-                    <button class="card-button" onclick="alert('Progress tracking coming soon!')">View Progress</button>
+                <div class="dashboard-card lesson-card">
+                    <div class="lesson-header">
+                        <div class="lesson-status" id="lesson2-status">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" class="lesson-circle">
+                                <circle cx="12" cy="12" r="10" stroke="#e5e7eb" stroke-width="2"/>
+                            </svg>
+                        </div>
+                        <h3 class="card-title">Lesson 2: AI Tools and Platforms</h3>
+                    </div>
+                    <p class="card-content">Explore popular AI tools like ChatGPT, Claude, and other platforms that can enhance your productivity.</p>
+                    <button class="card-button" onclick="completeLesson(2)">Complete Lesson</button>
                 </div>
 
-                <div class="dashboard-card">
-                    <h3 class="card-title">🎯 AI Assessment</h3>
-                    <p class="card-content">Take our AI assessment to get personalized recommendations and track your skill development.</p>
-                    <button class="card-button" onclick="window.location.href='questionnaire.html'">Take Assessment</button>
+                <div class="dashboard-card lesson-card">
+                    <div class="lesson-header">
+                        <div class="lesson-status" id="lesson3-status">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" class="lesson-circle">
+                                <circle cx="12" cy="12" r="10" stroke="#e5e7eb" stroke-width="2"/>
+                            </svg>
+                        </div>
+                        <h3 class="card-title">Lesson 3: Prompt Engineering Mastery</h3>
+                    </div>
+                    <p class="card-content">Master the art of writing effective prompts to get the best results from AI tools and applications.</p>
+                    <button class="card-button" onclick="completeLesson(3)">Complete Lesson</button>
                 </div>
 
-                <div class="dashboard-card">
-                    <h3 class="card-title">⚙️ Account Settings</h3>
-                    <p class="card-content">Manage your account preferences, update your profile, and customize your learning experience.</p>
-                    <button class="card-button" onclick="alert('Account settings coming soon!')">Settings</button>
+                <div class="dashboard-card lesson-card">
+                    <div class="lesson-header">
+                        <div class="lesson-status" id="lesson4-status">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" class="lesson-circle">
+                                <circle cx="12" cy="12" r="10" stroke="#e5e7eb" stroke-width="2"/>
+                            </svg>
+                        </div>
+                        <h3 class="card-title">Lesson 4: AI for Business Automation</h3>
+                    </div>
+                    <p class="card-content">Discover how to automate business processes using AI to save time and increase efficiency.</p>
+                    <button class="card-button" onclick="completeLesson(4)">Complete Lesson</button>
+                </div>
+
+                <div class="dashboard-card lesson-card">
+                    <div class="lesson-header">
+                        <div class="lesson-status" id="lesson5-status">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" class="lesson-circle">
+                                <circle cx="12" cy="12" r="10" stroke="#e5e7eb" stroke-width="2"/>
+                            </svg>
+                        </div>
+                        <h3 class="card-title">Lesson 5: AI Content Creation</h3>
+                    </div>
+                    <p class="card-content">Learn to create engaging content, marketing materials, and creative assets using AI tools.</p>
+                    <button class="card-button" onclick="completeLesson(5)">Complete Lesson</button>
+                </div>
+
+                <div class="dashboard-card lesson-card">
+                    <div class="lesson-header">
+                        <div class="lesson-status" id="lesson6-status">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" class="lesson-circle">
+                                <circle cx="12" cy="12" r="10" stroke="#e5e7eb" stroke-width="2"/>
+                            </svg>
+                        </div>
+                        <h3 class="card-title">Lesson 6: AI Data Analysis</h3>
+                    </div>
+                    <p class="card-content">Master data analysis and visualization using AI tools to make better business decisions.</p>
+                    <button class="card-button" onclick="completeLesson(6)">Complete Lesson</button>
+                </div>
+
+                <div class="dashboard-card lesson-card">
+                    <div class="lesson-header">
+                        <div class="lesson-status" id="lesson7-status">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" class="lesson-circle">
+                                <circle cx="12" cy="12" r="10" stroke="#e5e7eb" stroke-width="2"/>
+                            </svg>
+                        </div>
+                        <h3 class="card-title">Lesson 7: Building Your AI Strategy</h3>
+                    </div>
+                    <p class="card-content">Develop a comprehensive AI strategy for your business and career growth.</p>
+                    <button class="card-button" onclick="completeLesson(7)">Complete Lesson</button>
                 </div>
             </div>
         </main>
