Added-new-situation-tag

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="C6umgycPtbR5OT5z7m1UJxuA0jAVVfqrp5ad0PDTz9c" />
     <title>Movienta - 28-Day AI Challenge</title>
     <link rel="icon" type="image/png" href="Images/favicon-montevia.png">
     <style>
